Mon Nov 16 10:46:15 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/ExternalParser.cc: Add checks for null tokens, adapted
	from patch by Vadim Checkan.

Sun Nov 15 17:04:34 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HTML.cc(do_tag): Fix for refresh tags w/o URLs.

	* htmerge/docs.cc, htmerge/words.cc: Change \r to \n, as mentioned
	by Andrew Bishop.

        * htcommon/DocumentRef.h, htcommon/DocumentRef.cc: Define new fields
        docBackLinks (backlink count) and docSig (document signature).
	
	* htdig/Retriever.cc: Keep track of docBackLinks.
	
	* htsearch/Display.cc: Add variable BACKLINKS to display the count.

Sat Nov 14 20:30:18 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HTML.cc(parse, do_tag): Ensure links respect META robot
	settings. Patch contributed by Michael Spann
	<mikes@mail.sv.dialogic.com>.

	* htdig/HTML.cc(do_tag): Eliminate bug that ignores "?" in URLs

	* htdig/HTML.cc(do_tag): Add support for META refresh tags as
	"redirects", submitted by Aidas Kasparas
	<kaspar@dobilas.infosistema.lt>.
	
Sun Nov  8 20:33:22 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Document.cc: Changed reset to keep proxy settings--fixes
	bug noted by Didier Gautheron <dgautheron@magic.fr>

Fri Nov  6 17:07:00 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* contrib/wordfreq/wordfreq.pl: Updated with patch from Isoif
	Fettich <ifettich@netsoft.ro> to use Berkeley DB.

	* contrib/whatsnew/whatsnew.pl: Fixed mistake from Oct 26 change.

	* contrib/htparsedoc/parse_word_doc.pl: Added file contributed by
	Jesse.

	* contrib/README: Updated to include short descriptions of the scripts.

	* contrib/multidig/*: New scripts to make working with multiple DB
	a little easier.
	
	* configure, configure.in: Added changes to support snapshots.

	* .version: Resurrected to automate snapshot versions.
	
Wed Nov  4 15:02:43 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>
